{{$NEXT}}

2.031     2015-01-24 12:35:52+01:00 Europe/Prague

Interface:
* FeatureStructure has new method add_ufeatures() that performs the dual operation to get_ufeatures().

Features:
* New value 'gdv' of the feature 'verbform': Latin gerundive (as opposed to the gerund, verbform=ger).

Drivers:
* LA::Conll



2.030     2015-01-21 14:45:58+01:00 Europe/Prague

Features:
* New value 'light' of the feature 'verbtype': light/support verb in Japanese ("suru") and other languages.

Drivers:
* JA::Conll



2.029     2015-01-07 11:05:40+01:00 Europe/Prague

Fixes:
* Fixed several bugs in classification of numerals in Tagset::CS::Pdt.



2.028     2014-12-20 13:21:11+01:00 Europe/Prague

Drivers:
* IT::Conll



2.027     2014-12-10 22:34:10+01:00 Europe/Prague

Drivers:
* HU::Conll

Interface:
* FeatureStructure has new methods is_active() and is_passive().



2.026     2014-12-05 18:56:03+01:00 Europe/Prague

Drivers:
* HI::Conll
* DE::Smor

Interface:
* FeatureStructure has new method set_other_subfeature().



2.025     2014-11-24 17:43:29+01:00 Europe/Prague

Features:
* New value 'int' of the feature 'voice': intensive voice/aspect (the PIEL binyan) in Hebrew.

Drivers:
* HE::Conll



2.024     2014-11-21 17:24:35+01:00 Europe/Prague

Features:
* New value 'opt' of the feature 'mood': optative mood in Ancient Greek and Turkish, to express wishes:
  "May you have a long life!" "If only I were rich!"
* New value 'des' of the feature 'mood': desiderative mood in Turkish: "He wants to come."
* New value 'nec' of the feature 'mood': necessitative mood in Turkish: "He must come. He should come."
* New value 'mid' of the feature 'voice': middle voice in Ancient Greek. (The mediopassive voice can be expressed as 'mid|pass'.)
* New value 'rcp' of the feature 'voice': reciprocal (Turkish "karıştı", "tutuştular")
* New value 'cau' of the feature 'voice': causative (Turkish "karıştırıyor" ("is confusing"))

Drivers:
* GRC::Conll


